[package]
name = "wonders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.0", features = [ "runtime-tokio-rustls", "postgres", "json", "uuid"] }
tokio = { version = "1", features = [ "full" ] }
kamadak-exif = "0.5.4"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
